--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -3,7 +3,7 @@
   authors: Fong KC, Heo S, Lim CC, Kim H, Chan AY, Lee W, Stewart R, Choi HM, Son JY, Bell ML
   link:
     url: https://doi.org/10.1289/EHP9855
-    display: Environmental Health Perspectives 2022, 130(9): 096001
+    display: Environmental Health Perspectives 2022, 130(9), 096001
   highlight: 1
 
 - title: "Do Fine Particulate Air Pollution (PM2.5) Exposure and its Attributable Premature Mortality Differ for Immigrants Compared to those Born in the United States?"
@@ -11,7 +11,7 @@
   authors: Fong KC, Bell ML
   link:
     url: https://pubmed.ncbi.nlm.nih.gov/33129853/
-    display: Environmental Research 2021, 196: 110387
+    display: Environmental Research 2021, 196, 110387
   highlight: 1
 
 - title: "Disparities in exposure to surrounding greenness related to proportion of the population that were immigrants to the United States"
@@ -19,5 +19,5 @@
   authors: Fong KC, Mehta NK, Bell ML
   link:
     url: https://www.ncbi.nlm.nih.gov/pubmed/31978731
-    display: International Journal of Hygiene and Environmental Health 2020, 224: 113434
+    display: International Journal of Hygiene and Environmental Health 2020, 224, 113434
   highlight: 1
