updated pages to include news and members

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 title: LEAPH
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
-  Website of LEAPH.
+  Welcome to LEAPH
 baseurl: ""
 url: ""
 
