--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,6 @@
 
+- date: 10. January 2023
+  headline: "Kelvin Fong named one of Research Nova Scotia's [New Health Investigators](https://researchns.ca/2023/01/10/research-nova-scotia-supports-early-career-health-researchers-with-1-22-million-in-funding/)."
+
 - date: 18. September 2022
   headline: "We attend ISEE2022 in Athens, Greece! [ISEE2022](https://isee2022.org/)."
