--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -24,3 +24,11 @@
   number_educ: 2
   education1: Focusing on ambient air pollution disparities and respiratory outcomes
   education2: <a href="https://www.fulbright.ca/programs/killam-fellowships">Killam Fellowship</a> alumna, University of Washington
+
+- name: Ty Martin
+  photo: ty.png
+  info: DISP Student
+  email: ty508225@dal.ca
+  number_educ: 2
+  education1: Focusing on low-cost sensor network deployment and air pollution disparities
+  education2: Medical Sciences major at Dalhousie University
