--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,4 +1,10 @@
 
+- date: 11. April 2023
+  headline: "Ty Martin wins Best Poster at Dalhousie Integrated Sciences Program ([DISP](https://www.dal.ca/academics/programs/undergraduate/disp.html)) Research Day!"
+
+- date: 23. March 2023
+  headline: "Kelvin Fong speaks at [Atlantic Air Quality & Health Workshop](https://twitter.com/KelvinCFong/status/1639014147261120513?s=20)"
+  
 - date: 10. January 2023
   headline: "Kelvin Fong named one of Research Nova Scotia's [New Health Investigators](https://researchns.ca/2023/01/10/research-nova-scotia-supports-early-career-health-researchers-with-1-22-million-in-funding/)."
 
