--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,4 +1,6 @@
-
+- date: 22. June 2023
+  headline: "We attended and presented at the inaugural ([ISEE-NAC Conference](https://twitter.com/KelvinCFong/status/1673025228350316548?s=20))!"
+  
 - date: 11. April 2023
   headline: "Ty Martin wins Best Poster at Dalhousie Integrated Sciences Program ([DISP](https://www.dal.ca/academics/programs/undergraduate/disp.html)) Research Day!"
 
