--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,5 +1,5 @@
 - date: 22. June 2023
-  headline: "We attended and presented at the inaugural ([ISEE-NAC Conference](https://twitter.com/KelvinCFong/status/1673025228350316548?s=20))!"
+  headline: "We attended and presented at the inaugural [ISEE-NAC Conference](https://twitter.com/KelvinCFong/status/1673025228350316548?s=20)!"
   
 - date: 11. April 2023
   headline: "Ty Martin wins Best Poster at Dalhousie Integrated Sciences Program ([DISP](https://www.dal.ca/academics/programs/undergraduate/disp.html)) Research Day!"
@@ -11,4 +11,4 @@
   headline: "Kelvin Fong named one of Research Nova Scotia's [New Health Investigators](https://researchns.ca/2023/01/10/research-nova-scotia-supports-early-career-health-researchers-with-1-22-million-in-funding/)."
 
 - date: 18. September 2022
-  headline: "We attend ISEE2022 in Athens, Greece! [ISEE2022](https://isee2022.org/)."
+  headline: "We attend [ISEE2022](https://isee2022.org/) in Athens, Greece!."
