fixing errors for publications

--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -47,7 +47,7 @@
   highlight: 1
   
 - title: "A Review of Epidemiologic Studies on Greenness and Health: Updated Literature Through 2017"
-  description: Do some PM2.5 components affect fetal growth more than others?
+  description: How does greenness affect population health?
   authors: Fong KC, Hart JE, James P
   link:
     url: https://www.ncbi.nlm.nih.gov/pubmed/29392643
