--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,6 @@
+- date: 28. June 2023
+  headline: "We attended and Kelvin Fong gave a plenary on the future of epidemiology and biostatistics research at the [CSEB 2023 Conference](https://twitter.com/KelvinCFong/status/1674161294650359810?s=20) in Halifax."
+  
 - date: 22. June 2023
   headline: "We attended and presented at the inaugural [ISEE-NAC Conference](https://twitter.com/KelvinCFong/status/1673025228350316548?s=20)!"
   
