updated with Alex's recent accomplishments

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,6 @@
+- date: 11. July 2023
+  headline: "Congrats to Alex Del Favero-Campbell for winning the [Scotia Scholar Doctoral Award](https://twitter.com/adelfave/status/1678822091766788109?s=20)!"
+
 - date: 28. June 2023
   headline: "We attended and Kelvin Fong gave a plenary on the future of epidemiology and biostatistics research at the [CSEB 2023 Conference](https://twitter.com/KelvinCFong/status/1674161294650359810?s=20) in Halifax."
   
