--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -12,10 +12,11 @@
   photo: alex.jpg
   info: PhD Student
   email: Alexandra.DFC@dal.ca
-  number_educ: 3
+  number_educ: 4
   education1: Focusing on environmental influences on mental health outcomes
   education2: MSc, University of Hohenheim; MSc, University of Queensland
   education3: BSc, Purdue University
+  education4: Recipient of the <a href="https://researchns.ca/2023/07/11/research-nova-scotia-announces-960000-for-student-health-researchers/">Scotia Scholar Doctoral Award</a> and the <a href="https://www.dal.ca/faculty/gradstudies/finance-your-studies/scholarships-bursaries/vitamin-doctoral.html">Vitamin Scholarship</a>
 
 - name: Aline Maybank
   photo: aline.png
