--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,6 @@
+- date: 28. August 2023
+  headline: "BSc Honours student Aline has graduated and just started her [MPH at Yale](https://ysph.yale.edu/public-health-research-and-practice/department-research/environmental-health-sciences/)! Congrats and good luck, [Aline](https://twitter.com/AlineMaybank?s=20)!"
+
 - date: 11. July 2023
   headline: "Congrats to Alex Del Favero-Campbell for winning the [Scotia Scholar Doctoral Award](https://twitter.com/adelfave/status/1678822091766788109?s=20)!"
 
