--- a/_data/alumni_members.yml
+++ b/_data/alumni_members.yml
@@ -1,7 +1,7 @@
 - name: Aline Maybank
   photo: aline.png
-  duration: MPH student at Yale University
-  role: Honours BSc Student 2022 - 2023
+  info: MPH student at Yale University
+  duration: Honours BSc Student 2022 - 2023
   email: Aline.Maybank@dal.ca
   number_educ: 1
   education1: BSc, Dalhousie University
