--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,23 +1,23 @@
-- date: 28. August 2023
+- date: 28 August 2023
   headline: "BSc Honours student Aline has graduated and just started her [MPH at Yale](https://ysph.yale.edu/public-health-research-and-practice/department-research/environmental-health-sciences/)! Congrats and good luck, [Aline](https://twitter.com/AlineMaybank?s=20)!"
 
-- date: 11. July 2023
+- date: 11 July 2023
   headline: "Congrats to Alex Del Favero-Campbell for winning the [Scotia Scholar Doctoral Award](https://twitter.com/adelfave/status/1678822091766788109?s=20)!"
 
-- date: 28. June 2023
+- date: 28 June 2023
   headline: "We attended and Kelvin Fong gave a plenary on the future of epidemiology and biostatistics research at the [CSEB 2023 Conference](https://twitter.com/KelvinCFong/status/1674161294650359810?s=20) in Halifax."
   
-- date: 22. June 2023
+- date: 22 June 2023
   headline: "We attended and presented at the inaugural [ISEE-NAC Conference](https://twitter.com/KelvinCFong/status/1673025228350316548?s=20)!"
   
-- date: 11. April 2023
+- date: 11 April 2023
   headline: "Ty Martin wins Best Poster at Dalhousie Integrated Sciences Program ([DISP](https://www.dal.ca/academics/programs/undergraduate/disp.html)) Research Day!"
 
-- date: 23. March 2023
+- date: 23 March 2023
   headline: "Kelvin Fong speaks at [Atlantic Air Quality & Health Workshop](https://twitter.com/KelvinCFong/status/1639014147261120513?s=20)"
   
-- date: 10. January 2023
+- date: 10 January 2023
   headline: "Kelvin Fong named one of Research Nova Scotia's [New Health Investigators](https://researchns.ca/2023/01/10/research-nova-scotia-supports-early-career-health-researchers-with-1-22-million-in-funding/)."
 
-- date: 18. September 2022
+- date: 18 September 2022
   headline: "We attend ISEE2022 in Athens, Greece! [ISEE2022](https://isee2022.org/)."
