updated with jessie

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,9 @@
+- date: 14 February 2024
+  headline: "[New paper](https://iopscience.iop.org/article/10.1088/1748-9326/ad1fa4) co-authored by Kelvin Fong on Satellite Data for Environmental Justice!"
+
+- date: 8 January 2024
+  headline: "LEAPH moves to George Washington University in Washington, DC!"
+
 - date: 28 August 2023
   headline: "BSc Honours student Aline has graduated and just started her [MPH at Yale](https://ysph.yale.edu/public-health-research-and-practice/department-research/environmental-health-sciences/)! Congrats and good luck, [Aline](https://twitter.com/AlineMaybank?s=20)!"
 
