--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,6 @@
+- date: 10 April 2024
+  headline: "[Tsz Kin](https://leaph.info/team/) successfully defends his MSc proposal. Congrats!"
+
 - date: 14 February 2024
   headline: "[New paper](https://iopscience.iop.org/article/10.1088/1748-9326/ad1fa4) co-authored by Kelvin Fong on Satellite Data for Environmental Justice!"
 
