--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,10 @@
+- date: 5 June 2024
+  headline: "[Tsz Kin](https://leaph.info/team/) presented his work on nitrogen dioxide at [HAQAST 2024](https://youtu.be/na_D39SRJmc?si=l4anY80e2lsxhY3R)!"
+
+- date: 21 May 2024
+  headline: "Kelvin wins [Research Innovation Award from GWSPH](https://climatehealth.gwu.edu/chi-members-receive-gwsph-research-innovation-award
+) to advance green space assessment in epidemiology."
+ 
 - date: 10 April 2024
   headline: "[Tsz Kin](https://leaph.info/team/) successfully defends his MSc proposal. Congrats!"
 
