updated with Niyati's info

--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -34,3 +34,10 @@
   education2: MSc Student, Dalhousie University 
   education3: BSc, Dalhousie University
  
+- name: Niyati Shah
+  photo: niyati.png
+  info: Research Associate
+  email: niyatishah54@gwmail.gwu.edu
+  number_educ: 2
+  education1: Focusing on the health experiences of climate-induced migration among women in informal settlements
+  education2: BSc, George Washington University 
