updated website with new team members

--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -41,3 +41,15 @@
   number_educ: 2
   education1: Focusing on the health experiences of climate-induced migration among women in informal settlements
   education2: BSc, George Washington University 
+  
+- name: Corey Bassett
+  photo: corey.jpg
+  info: Postdoctoral Associate
+  email: corinne.bassett@email.gwu.edu
+  number_educ: 3
+  education1: PhD, Forestry, University of British Columbia, with <a href="https://scholar.google.com/citations?user=OX9fuvAAAAAJ&hl=en&oi=sra">Susan Day</a> and <a href="https://scholar.google.com/citations?hl=en&user=_1RPzIAAAAAJ">Cecil Konijnendijk</a>
+  education2: MES, BA, University of Pennsylvania
+  education3: <a href="https://coreybassett.com/">Personal Website</a>
+
+  
+  
