--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,10 @@
+- date: 19 August 2024
+  headline: "[Corey](https://leaph.info/team/) and [Niyati](https://leaph.info/team/) recently joined our group. Welcome!"
+
+- date: 20 July 2024
+  headline: "Kelvin received the [Cross-Disciplinary Research Fund](https://research.gwu.edu/cross-disciplinary-research-fund)
+ to explore pediatric asthma disparities related to environmental exposures."
+
 - date: 5 June 2024
   headline: "[Tsz Kin](https://leaph.info/team/) presented his work on nitrogen dioxide at [HAQAST 2024](https://youtu.be/na_D39SRJmc?si=l4anY80e2lsxhY3R)!"
 
