--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,4 +1,7 @@
 - date: 19 August 2024
+  headline: "Alumnus [Ty](https://leaph.info/team/) received the [Killam Fellowship](https://www.fulbright.ca/programs/killam-fellowships) to study at the University of Washington this coming academic year. Congrats, Ty!"
+
+- date: 19 August 2024
   headline: "[Corey](https://leaph.info/team/) and [Niyati](https://leaph.info/team/) recently joined our group. Welcome!"
 
 - date: 20 July 2024
