--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,9 @@
+- date: 7 Sept 2024
+  headline: "Alumna [Aline](https://leaph.info/team/) completed a [NCEI/NASA DEVELOP summer internship](https://www.ncei.noaa.gov/news/nasa-develop-ncei-summer-2024-term) on Vermont Wildland Fires. Congrats, Aline!"
+  
+- date: 31 August 2024
+  headline: "[Team members](https://x.com/KelvinCFong/status/1829847070603202667) presented our recent research at [ISEE2024](https://iseeconference.org/)"
+  
 - date: 19 August 2024
   headline: "Alumnus [Ty](https://leaph.info/team/) received the [Killam Fellowship](https://www.fulbright.ca/programs/killam-fellowships) to study at the University of Washington this coming academic year. Congrats, Ty!"
 
