--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,6 @@
+- date: 30 Sept 2024
+  headline: "Welcoming research assistants [Ana, Ellie, Katy, and Vaibhav](https://leaph.info/team/)!"
+
 - date: 7 Sept 2024
   headline: "Alumna [Aline](https://leaph.info/team/) completed a [NCEI/NASA DEVELOP summer internship](https://www.ncei.noaa.gov/news/nasa-develop-ncei-summer-2024-term) on Vermont Wildland Fires. Congrats, Aline!"
   
