--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -43,7 +43,7 @@
   education2: MPH Student, George Washington University
   education3: BSc, University of Georgia
   
-- name: Ellie
+- name: Ellie Krutchen
   photo: ellie.jpg
   info: Research Assistant
   email: 
