updated Jessie's status

--- a/_data/alumni_members.yml
+++ b/_data/alumni_members.yml
@@ -12,3 +12,8 @@
   photo: lindsay.png
   info: BSc Student at Dalhousie University
   duration: Experiential Learning Student Fall 2023
+  
+- name: Jessie Cullum
+  photo: jessie.jpeg
+  info: MSc Student at Dalhousie University
+  duration: Research Assistant 2024
